fixed overflow width

--- a/src/Components/NavBar/Nav.css
+++ b/src/Components/NavBar/Nav.css
@@ -81,5 +81,6 @@
 		margin-left: 0;
 		width: fit-content;
 		text-align: center;
+		font-size: 1.6rem;
 	}
 }
